--- a/Figl/packages.config
+++ b/Figl/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="bootstrap" version="3.3.7" targetFramework="net451" />
   <package id="DotVVM" version="1.0.5.0" targetFramework="net451" />
   <package id="DotVVM.Core" version="1.0.5.0" targetFramework="net451" />
+  <package id="jQuery" version="1.9.1" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Analyzers" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.Common" version="1.0.0" targetFramework="net451" />
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net451" />
