--- a/Figl/Figl.csproj
+++ b/Figl/Figl.csproj
@@ -107,6 +107,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="DotvvmStartup.cs" />
+    <Compile Include="ViewModels\AboutPageViewModel.cs" />
+    <Compile Include="ViewModels\ContactPageViewModel.cs" />
     <Compile Include="ViewModels\HomePageViewModel.cs" />
     <Compile Include="ViewModels\LayoutViewModel.cs" />
   </ItemGroup>
@@ -125,6 +127,8 @@
     <Content Include="Content\bootstrap-theme.min.css.map" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <None Include="Scripts\jquery-1.9.1.intellisense.js" />
+    <Content Include="Images\2.PNG" />
+    <Content Include="Images\3.PNG" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Scripts\jquery-1.9.1.js" />
@@ -135,6 +139,8 @@
     <Content Include="Views\layout.dotmaster" />
     <Content Include="Scripts\jquery-1.9.1.min.map" />
     <Content Include="Views\homePage.dothtml" />
+    <Content Include="Views\aboutPage.dothtml" />
+    <Content Include="Views\contactPage.dothtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
